force-app/main/default/objects/Trelew_Contacto_Ampliado__c/Trelew_Contacto_Ampliado__c.object-meta.xml
<CustomObject>
    <label>Trelew Contacto Ampliado</label>
    <nameField>
        <displayFormat>TrelewContactoAmp-{00000}</displayFormat>
        <label>Trelew Contacto Ampliado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trelew Contactos Ampliados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>