force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Apellido__c.field-meta.xml
<CustomField>
    <fullName>Apellido__c</fullName>
    <formula>Citizen__r.LastName</formula>
    <label>Apellido</label>
    <type>Text</type>
</CustomField>