force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Campo_Calculado__c.field-meta.xml
<CustomField>
    <fullName>Campo_Calculado__c</fullName>
    <label>Etiqueta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>