force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudadano</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trelew Contactos Ampliados</relationshipLabel>
    <relationshipName>Trelew_Activistas</relationshipName>
    <type>Lookup</type>
</CustomField>