force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Ciudadano_SFID__c.field-meta.xml
<CustomField>
    <fullName>Ciudadano_SFID__c</fullName>
    <formula>Citizen__r.Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudadano SFID</label>
    <type>Text</type>
</CustomField>