force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <label>Comentario</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>