force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <formula>Citizen__r.Document_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>