force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Domicilio__c</fullName>
    <label>Domicilio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>