force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Domicilio_Padron__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Padron__c</fullName>
    <label>Domicilio Padron</label>
    <length>255</length>
    <type>Text</type>
</CustomField>