force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <label>Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>