force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Fecha_Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Etiqueta__c</fullName>
    <label>Fecha Etiqueta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>