force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/FKey_Numerico__c.field-meta.xml
<CustomField>
    <fullName>FKey_Numerico__c</fullName>
    <externalId>true</externalId>
    <label>FKey Numerico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>