force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Geo_Fraccion__c.field-meta.xml
<CustomField>
    <fullName>Geo_Fraccion__c</fullName>
    <label>Geo Fraccion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>