force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Geo_Radio__c.field-meta.xml
<CustomField>
    <fullName>Geo_Radio__c</fullName>
    <label>Geo Radio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>