force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Geo_Short_ID__c.field-meta.xml
<CustomField>
    <fullName>Geo_Short_ID__c</fullName>
    <label>Geo Short ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>