force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <label>Linkedin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>