force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Nombre_completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_completo__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Trelew_Contacto_Ampliado__c/&apos; + Id + &apos;/view&apos;,Citizen__r.FirstName + &apos; &apos; + Citizen__r.MiddleName + &apos; &apos; +Citizen__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacto Ampliado</label>
    <type>Text</type>
</CustomField>