force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <externalId>true</externalId>
    <label>Orden</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>