force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Origen_De_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Origen_De_Contacto__c</fullName>
    <label>Origen De Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>POLO SOCIAL</fullName>
            </value>
            <value>
                <fullName>UCR</fullName>
            </value>
            <value>
                <fullName>Sin dato</fullName>
            </value>
            <value>
                <fullName>UltimoEmpadronamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>