force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Primer_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Primer_Nombre__c</fullName>
    <formula>Citizen__r.FirstName</formula>
    <label>Primer Nombre</label>
    <type>Text</type>
</CustomField>