force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Segundo_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre__c</fullName>
    <formula>Citizen__r.MiddleName</formula>
    <label>Segundo Nombre</label>
    <type>Text</type>
</CustomField>