force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Telefono_Fijo__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Fijo__c</fullName>
    <label>Teléfono Fijo</label>
    <type>Phone</type>
</CustomField>