force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Telefono_Movil__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Movil__c</fullName>
    <label>Teléfono Móvil</label>
    <type>Phone</type>
</CustomField>