force-app/main/default/objects/Trelew_Contacto_Ampliado__c/fields/Typeform_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Typeform_Response_ID__c</fullName>
    <label>Typeform Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>