force-app/main/default/objects/Trelew_Contacto_Ampliado__c/recordTypes/Trelew_Ciudadano.recordType-meta.xml
<RecordType>
    <fullName>Trelew_Ciudadano</fullName>
    <active>true</active>
    <label>Trelew Ciudadano</label>
</RecordType>