force-app/main/default/objects/Trelew_Contacto_Ampliado__c/listViews/Todos_los_Contactos_Ampliados_TrelewJxC.listView-meta.xml
<ListView>
    <fullName>Todos_los_Contactos_Ampliados_TrelewJxC</fullName>
    <columns>Nombre_completo__c</columns>
    <columns>Citizen__c</columns>
    <columns>DNI__c</columns>
    <columns>Origen_De_Contacto__c</columns>
    <columns>Domicilio__c</columns>
    <columns>Email__c</columns>
    <columns>Telefono_Movil__c</columns>
    <columns>Comentario__c</columns>
    <columns>Lote__c</columns>
    <columns>Nro_Mesa__c</columns>
    <columns>Circuito_Numero__c</columns>
    <columns>Nombre_Circuito__c</columns>
    <columns>Campo_Calculado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Contactos Ampliados TrelewJxC</label>
    <sharedTo>
        <group>TrelewJxC2023</group>
    </sharedTo>
</ListView>